Backend: Update endpoints/Readme
